--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Mobile + responsive -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Updated project title -->
+    <title>St. T’s MSR Leaderboard — CYO 2025</title>
+
+    <!-- Theme + metadata -->
+    <meta name="theme-color" content="#C41E3A" />
     <meta
       name="description"
-      content="Web app showing Summer League 2025 MSR Leaderboard"
+      content="St. T’s CYO 2025 MSR leaderboard — tracking complete player contributions in a modern, team-centered rating system."
     />
-    <title>Summer League 2025 MSR Leaderboard</title>
+
+    <!-- Correct GitHub Pages–safe asset paths -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Font smoothing for cleaner UI -->
+    <style>
+      html {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+    </style>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
+
+
+
+
 
